# rinha-backend-2024-q1-felipma

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  init.sql  local_gatling_test.sh  nginx.conf
src/: main.rs
src/handlers/: get_client_statement_handler.rs  mod.rs  post_client_transaction_handler.rs
src/queries/: make_client_extract.rs  mod.rs  process_transaction.rs
